# mpi_labs

./: CMakeLists.txt  CMakePresets.json  README.md  master_slave_wrapper.h  mpi_1.cpp  mpi_2.cpp  mpi_5.cpp
